--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://yourusername.github.io/your-repo-name",
   "name": "color_picker",
   "version": "0.1.0",
   "private": true,
