--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yourusername.github.io/your-repo-name",
+  "homepage": "https://yourusername.github.io/color_picker",
   "name": "color_picker",
   "version": "0.1.0",
   "private": true,
